fix-ish some styling stuff (overflow problem)

--- a/src/Components/Movie.css
+++ b/src/Components/Movie.css
@@ -70,6 +70,9 @@ h4 {
 .icon {
   margin: 10px;
 }
+.icons {
+  margin: 10px;
+}
 
 .icon:hover {
   cursor: pointer;
