--- a/src/Components/NewMovie.css
+++ b/src/Components/NewMovie.css
@@ -1,11 +1,12 @@
 .NewMovie-controls {
   margin: auto;
   margin-top: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
   line-height: 1.5em;
   border: 2px solid var(--light-stuff);
   border-radius: 1em;
-  max-width: 90vw;
-  min-width: 80vw;
+  width: 100vw;
   max-height: 20em;
   text-overflow: ellipsis;
   white-space: normal;
